--- a/servidor_central/src/App.scss
+++ b/servidor_central/src/App.scss
@@ -3,7 +3,6 @@
 
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
 
   > header {
     width: 100%;
@@ -17,6 +16,19 @@
     > section {
       display: flex;
       flex-direction: row;
+      align-items: center;
+
+      > div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        margin-right: 3rem;
+
+        > h3 {
+          margin-right: 1rem;
+        }
+      }
     }
   }
 }
