--- a/servidor_central/src/App.scss
+++ b/servidor_central/src/App.scss
@@ -2,16 +2,28 @@
   width: 100vw;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 
   > header {
     width: 100%;
 
-    padding: 3rem 5rem;
+    position: fixed;
+    top: 0;
+
+    padding: 0.7rem 5rem;
+    margin-bottom: 5rem;
+    background-color: #fff;
+    border-bottom: 0.1rem solid #d7d7d7;
+    box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.1);
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+
+    > h1 {
+      color: #39393a;
+    }
 
     > section {
       display: flex;
@@ -27,8 +39,17 @@
 
         > h3 {
           margin-right: 1rem;
+          color: #39393a;
         }
       }
     }
+  }
+
+  > main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin: 15rem 0 5rem;
   }
 }
