--- a/servidor_central/src/global.scss
+++ b/servidor_central/src/global.scss
@@ -17,6 +17,7 @@ body {
   font-size: 1.6rem;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  background-color: rgb(245, 245, 245);
 }
 
 h1,
