--- a/servidor_central/src/components/Button/styles.scss
+++ b/servidor_central/src/components/Button/styles.scss
@@ -8,7 +8,7 @@
   border: 0;
 
   padding: 1rem 1.5rem;
-  margin: 2rem 0 2rem 2rem;
+  margin: 2rem 0 2rem;
 
   cursor: pointer;
   transition: 0.2s;
