--- a/servidor_central/src/components/DeviceCard/styles.scss
+++ b/servidor_central/src/components/DeviceCard/styles.scss
@@ -43,6 +43,10 @@
         color: #22ac57;
         font-weight: 700;
       }
+
+      > .state-off {
+        color: #a32929;
+      }
     }
 
   }
